--- a/package.json
+++ b/package.json
@@ -112,7 +112,8 @@
   "resolutions": {
     "markdown-it": "^12.2.0",
     "prosemirror-transform": "1.2.5",
-    "yargs-parser": "^15.0.1"
+    "yargs-parser": "^15.0.1",
+    "**/@types/react": "^16.9.19"
   },
   "repository": {
     "type": "git",
