--- a/package.json
+++ b/package.json
@@ -101,8 +101,6 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "jest": "^26.6.3",
     "prettier": "^1.19.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
     "source-map-loader": "^0.2.4",
     "styled-components": "^5.2.1",
     "ts-loader": "^6.2.1",
@@ -112,8 +110,7 @@
   "resolutions": {
     "markdown-it": "^12.2.0",
     "prosemirror-transform": "1.2.5",
-    "yargs-parser": "^15.0.1",
-    "**/@types/react": "^16.9.19"
+    "yargs-parser": "^15.0.1"
   },
   "repository": {
     "type": "git",
